Разметка главной страницы
Разметка некоторых элементов главной страницы, согласно требований задания 2. Разметка.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,80 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Hёрдс</title>
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <header>
+      <h2>Шапка сайта</h2>
+      <nav>
+      <a href="index.html">
+        <img src="img/index-logo.svg" width="200" height="100" alt="Логотип Нёрдс">
+      </a>
+        <ul>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
+          <li><a href="#">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul> 
+        <div>
+          <img src="img/trashcan.svg" width="200" height="100" alt="Значок корзина">
+          <button type="button">Войти</button>
+        </div>
+      </nav>
+    </header>
 
+    <main>
+      <h1>Сайт студии "Нёрдс"</h1>
+
+      <section>
+        <h2>Блок с заказами</h2>
+        <div>
+          <img src="img/website.svg" width="200" height="100" alt="Значок ВЕБ-САЙТЫ">
+          <h3>Веб-сайты<h3>
+          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <button type="button">Заказать</button>
+        </div>
+
+        <div>
+          <img src="img/apps.svg" width="200" height="100" alt="Значок ПРИЛОЖЕНИЯ">
+          <h3>Приложения<h3>
+          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <button type="button">Заказать</button>
+        </div>
+
+        <div>
+          <img src="img/apps.svg" width="200" height="100" alt="Значок ПРЕЗЕНТАЦИИ">
+          <h3>Презентации<h3>
+          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+          <button type="button">Заказать</button>
+        </div>
+        <div></div>
+      </section>
+
+    </main>
+
+    <footer>
+      <h2>Футер</h2>
+      <ul>
+        <li><a href="#"> 
+          <img src="img/VK-logo.svg" width="20" height="20" alt="Логотип ВК">
+          Вконтакте</a>
+        </li>
+        <li><a href="#">
+          <img src="img/facebook-logo.svg" width="20" height="20" alt="Логотип Фейсбук">
+          Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="img/instagram-logo.svg" width="20" height="20" alt="Логотип Инстаграмм">
+            Инстаграмм</a>
+        </li>
+      </ul>
+      <div>
+        <p>Давайте дружить, это выгодно!</p>
+        <p>Скидка 10% для друзей из социальных сетей</p>
+      </div>
+    </footer> 
   </body>
 </html>
