Добавил разметку слайдера на главную
Доп. задание 2. Разметил слайдер.

--- a/sources/index.html
+++ b/sources/index.html
@@ -53,6 +53,21 @@
         <div></div>
       </section>
 
+      <section>
+        <h2>Слайдер </h2>
+        <img src="img/slider-background.svg" width="200" height="100" alt="Фон для слайдера">
+        <div>
+          <h3>Долго, дорого, скурпулезно.</h3>
+          <p>Математически выверенный дизайн для вашего сайта и мобильного приложения.</p>
+          <button type="button">Узнать больше</button>
+        </div> 
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </section>
+
     </main>
 
     <footer>
