Добавил на главную разметку "описание" и разметку с картой
Дополнительное к заданию 2.

--- a/sources/index.html
+++ b/sources/index.html
@@ -54,7 +54,7 @@
       </section>
 
       <section>
-        <h2>Слайдер </h2>
+        <h2>Слайдер</h2>
         <img src="img/slider-background.svg" width="200" height="100" alt="Фон для слайдера">
         <div>
           <h3>Долго, дорого, скурпулезно.</h3>
@@ -66,6 +66,60 @@
           <li></li>
           <li></li>
         </ul>
+      </section>
+
+      <section>
+        <h2>Описание</h2>
+
+        <div>
+          <h3>Мы - маленькая, но гордая дизайн-студия из Краснодара</h3>
+          <p>
+            Исповедуем принципы минимализма и чистоты. <br> 
+            Ставим математический расчет превыше креатива. <br>
+            Работаем не покладая рук, как роботы.
+          </p>
+          <p>Выполняем заказы на разработку:</p>
+          <ul>
+            <li>Веб-сайтом любой сложности</li>
+            <li>Мобильныйх приложений для iOS и Android</li>
+            <li>Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+          <button type="button">Узнать больше</button>
+        </div> 
+
+        <ul>
+          <li>
+            <a href="#"><img src="img/website-HTML-Academy-logo.svg" alt="Сайт HTML-Academy"></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/website-BORODINSKY-logo.svg" alt="Сайт Бородинский"></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/website-PINK-logo.svg" alt="Сайт Пинк"></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/website-MISHKA-logo.svg" alt="Сайт Мишка"></a>
+          </li>
+        </ul>
+
+        <div>
+          <img src="img/NERDS-logo.svg" alt="Логотип NERDS">
+          <h3>с 2004 года любим точность во всем:</h3>
+          <ul>
+            <li><span>146%</span> Уровень самоотдачи</li>
+            <li><span>100%</span> Соблюдение сроков</li>
+            <li><span>50%</span> Минимальная предоплата</li>
+          </ul>
+        </div> 
+      </section>
+          
+      <section>
+        <img src="img/maps.svg" alt="Дислокация NERDS на карте">
+        <div>
+          <h3>NERDS DESIGN STUDIO</h3>
+          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p>тел. +7 (812) 275-75-75</p>
+        </div>
       </section>
 
     </main>
