Немного поменял расположение

--- a/sources/index.html
+++ b/sources/index.html
@@ -86,6 +86,19 @@
           </ul>
           <button type="button">Узнать больше</button>
         </div> 
+        <div>
+          <img src="img/NERDS-logo.svg" alt="Логотип NERDS">
+          <h3>с 2004 года любим точность во всем:</h3>
+          <ul>
+            <li><span>146%</span> Уровень самоотдачи</li>
+            <li><span>100%</span> Соблюдение сроков</li>
+            <li><span>50%</span> Минимальная предоплата</li>
+          </ul>
+        </div> 
+      </section>
+
+      <section>
+        <h2>Ссылки на сайты-партнеры</h2>
 
         <ul>
           <li>
@@ -101,16 +114,6 @@
             <a href="#"><img src="img/website-MISHKA-logo.svg" alt="Сайт Мишка"></a>
           </li>
         </ul>
-
-        <div>
-          <img src="img/NERDS-logo.svg" alt="Логотип NERDS">
-          <h3>с 2004 года любим точность во всем:</h3>
-          <ul>
-            <li><span>146%</span> Уровень самоотдачи</li>
-            <li><span>100%</span> Соблюдение сроков</li>
-            <li><span>50%</span> Минимальная предоплата</li>
-          </ul>
-        </div> 
       </section>
           
       <section>
