Небольшие фиксы по расположению

--- a/sources/index.html
+++ b/sources/index.html
@@ -117,6 +117,7 @@
       </section>
           
       <section>
+        <h2>Расположение на карте</h2>
         <img src="img/maps.svg" alt="Дислокация NERDS на карте">
         <div>
           <h3>NERDS DESIGN STUDIO</h3>
