Разметил доп. области каталога
Допавил простую разметку каталоку по доп. заданию 2
Плюс небольшие косметические зименения в коде.
Убрал лишние отступы и т.д.

--- a/sources/catalog.html
+++ b/sources/catalog.html
@@ -8,6 +8,7 @@
 
     <header>
       <h2>Шапка сайта</h2>
+
       <nav>
       <a href="index.html">
         <img src="img/index-logo.svg" width="200" height="100" alt="Логотип Нёрдс">
@@ -27,8 +28,28 @@
 
     <main>
       <h1>Магазин готовых шаблонов</h1>
+
       <section>
         <h2>Фильтрация</h2>
+
+        <div>
+          <h3>Стоимость</h3>
+          <ul>
+            <li>От 0</li>
+            <li>До 15 000</li>
+          </ul>
+        </div>
+
+        <div>
+          <h3>Сортировать</h3>
+          <ul>
+            <li>Цене</li>
+            <li>Типу</li>
+            <li>Названию</li>
+            <li><button type="button">Возрастание</button></li>
+            <li><button type="button">Убывание</button></li>
+        </div>
+        
         <div>
             <h3>Сетка</h3>
             <ul>
@@ -37,6 +58,7 @@
                 <li>Резиновая</li>
             </ul>
         </div>
+
         <div>
             <h3>Особенности</h3>
             <ul>
@@ -49,6 +71,7 @@
         </div>
         <button type="button">Показать</button>
       </section>
+
       <section>
           <h2>Отображаемый список товаров</h2>
           <ul>
@@ -64,11 +87,34 @@
               <li><img src="img/sedona.svg" width="100" height="200" alt="Товар САЙТ 5"></li>
               <li><img src="img/sedona.svg" width="100" height="200" alt="Товар САЙТ 6"></li>
           </ul>
+
+        <div>
+          <h2>Отображаемый список товаров</h2>
+          <ol>
+            <li></li> 
+            <li></li>
+            <li></li>
+          </ol>
+          <button type="button">Следующая</button>
+        </div>
       </section>
+
+      <section>
+        <h2>Расположение на карте</h2>
+
+        <img src="img/maps.svg" alt="Дислокация NERDS на карте">
+        <div>
+          <h3>NERDS DESIGN STUDIO</h3>
+          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p>тел. +7 (812) 275-75-75</p>
+        </div>
+      </section>
+
     </main>
 
     <footer>
       <h2>Футер</h2>
+
       <ul>
         <li><a href="#"> 
           <img src="img/VK-logo.svg" width="20" height="20" alt="Логотип ВК">
@@ -84,6 +130,7 @@
             Инстаграмм</a>
         </li>
       </ul>
+
       <div>
         <p>Давайте дружить, это выгодно!</p>
         <p>Скидка 10% для друзей из социальных сетей</p>
