--- a/sources/index.html
+++ b/sources/index.html
@@ -76,8 +76,8 @@
         <div>
           <h3>Мы - маленькая, но гордая дизайн-студия из Краснодара</h3>
           <p>
-            Исповедуем принципы минимализма и чистоты. <br> 
-            Ставим математический расчет превыше креатива. <br>
+            Исповедуем принципы минимализма и чистоты. 
+            Ставим математический расчет превыше креатива.
             Работаем не покладая рук, как роботы.
           </p>
           <p>Выполняем заказы на разработку:</p>
