Добавил еще картинок

--- a/sources/index.html
+++ b/sources/index.html
@@ -10,7 +10,7 @@
       <h2>Шапка сайта</h2>
       <nav>
         <a>
-          <img src="img/index-logo.svg" width="200" height="100" alt="Логотип Нёрдс">
+          <img src="img\decor\nerds-logo.svg" width="200" height="100" alt="Логотип Нёрдс">
         </a>
         <ul>
           <li><a href="#">Студия</a></li>
@@ -20,7 +20,7 @@
         </ul>
         
         <div>
-          <img src="img/trashcan.svg" width="200" height="100" alt="Значок корзина">
+          <img src="img\decor\nerds-logo.svg" width="200" height="100" alt="Значок корзина">
           <button type="button">Войти</button>
         </div>
       </nav>
