Переместил рисунок слайдера в div
Обернул рисунок на слайдере главной страницы.
По макету там div под цвет картинок, а не нем уже кнопки, текст и картинки слайдаются.

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <section>
         <h2>Слайдер</h2>
 
-        <img src="img/slider-background.svg" width="200" height="100" alt="Фон для слайдера">
         <div>
           <h3>Долго, дорого, скурпулезно.</h3>
           <p>Математически выверенный дизайн для вашего сайта и мобильного приложения.</p>
           <button type="button">Узнать больше</button>
+          <img src="img/slider-background.svg" width="100" height="100" alt="Контент для слайдера">
         </div> 
         <ul>
           <li></li>
