--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h2>Шапка сайта</h2>
       <nav>
         <a>
-          <img src="img\decor\nerds-logo.svg" width="150" height="80" alt="Логотип Нёрдс">
+          <img src="img/decor/nerds-logo.svg" width="150" height="80" alt="Логотип Нёрдс">
         </a>
         <ul>
           <li><a href="#">Студия</a></li>
@@ -20,7 +20,7 @@
         </ul>
         
         <div>
-          <img src="img\decor\cart-icon.svg" width="15" height="15" alt="Значок корзина">
+          <img src="img/decor/cart-icon.svg" width="15" height="15" alt="Значок корзина">
           <button type="button">Войти</button>
         </div>
       </nav>
@@ -49,21 +49,21 @@
         <h2>Блок с заказами</h2>
 
         <div>
-          <img src="img\decor\advantage-picture-red.jpg" width="200" height="100" alt="Значок ВЕБ-САЙТЫ">
+          <img src="img/decor/advantage-picture-red.jpg" width="200" height="100" alt="Значок ВЕБ-САЙТЫ">
           <h3>Веб-сайты<h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <button type="button">Заказать</button>
         </div>
 
         <div>
-          <img src="img\decor\advantage-picture-green.jpg" width="200" height="100" alt="Значок ПРИЛОЖЕНИЯ">
+          <img src="img/decor/advantage-picture-green.jpg" width="200" height="100" alt="Значок ПРИЛОЖЕНИЯ">
           <h3>Приложения<h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <button type="button">Заказать</button>
         </div>
 
         <div>
-          <img src="img\decor\advantage-picture-yellow.jpg" width="200" height="100" alt="Значок ПРЕЗЕНТАЦИИ">
+          <img src="img/decor/advantage-picture-yellow.jpg" width="200" height="100" alt="Значок ПРЕЗЕНТАЦИИ">
           <h3>Презентации<h3>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <button type="button">Заказать</button>
@@ -89,7 +89,7 @@
         </div>
 
         <div>
-          <img src="img\decor\nerds-picture.png" alt="Картинка Нёрдс">
+          <img src="img/decor/nerds-picture.png" alt="Картинка Нёрдс">
           <h3>с 2004 года любим точность во всем:</h3>
           <ul>
             <li><span>146%</span> Уровень самоотдачи</li>
@@ -136,16 +136,16 @@
 
       <ul>
         <li><a href="#"> 
-          <img src="img\decor\vk-icon.svg" width="20" height="20" alt="Логотип ВК">
+          <img src="img/decor/vk-icon.svg" width="20" height="20" alt="Логотип ВК">
           Вконтакте</a>
         </li>
         <li><a href="#">
-          <img src="img\decor\fb-icon.svg" width="20" height="20" alt="Логотип Фейсбук">
+          <img src="img/decor/fb-icon.svg" width="20" height="20" alt="Логотип Фейсбук">
           Фейсбук</a>
         </li>
         <li>
           <a href="#">
-            <img src="img\decor\insta-icon.svg" width="20" height="20" alt="Логотип Инстаграмм">
+            <img src="img/decor/insta-icon.svg" width="20" height="20" alt="Логотип Инстаграмм">
             Инстаграмм</a>
         </li>
       </ul>
