--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
 
       <nav>
       <a href="index.html">
-        <img src="img\decor\nerds-logo.svg" width="150" height="80" alt="Логотип Нёрдс">
+        <img src="img/decor/nerds-logo.svg" width="150" height="80" alt="Логотип Нёрдс">
       </a>
         <ul>
           <li><a href="#">Студия</a></li>
@@ -20,7 +20,7 @@
           <li><a href="#">Контакты</a></li>
         </ul> 
         <div>
-          <img src="img\decor\cart-icon.svg" width="15" height="15" alt="Значок корзина">
+          <img src="img/decor/cart-icon.svg" width="15" height="15" alt="Значок корзина">
           <button type="button">Войти</button>
         </div>
       </nav>
@@ -76,16 +76,16 @@
           <h2>Отображаемый список товаров</h2>
           <ul>
               <li>
-                <img src="img\content\img-sedona-jpg.jpg" width="100" height="200" alt="Товар Sedona"> 
+                <img src="img/content/img-sedona-jpg.jpg" width="100" height="200" alt="Товар Sedona"> 
                 <h3>SEDONA</h3>
                 <p>Информационный сайт для туристов</p>
                 <button type="button">9 900 РУБ.</button>
               </li>
-              <li><img src="img\content\img-pink-jpg.jpg" width="100" height="200" alt="Товар САЙТ 3"></li>
-              <li><img src="img\content\img-barbershop-jpg.jpg" width="100" height="200" alt="Товар Borodinsky"></li>
-              <li><img src="img\content\img-mishka-jpg.jpg" width="100" height="200" alt="Товар Mishka"></li>
-              <li><img src="img\content\img-aplus-jpg.jpg" width="100" height="200" alt="Товар Aplus"></li>
-              <li><img src="img\content\img-kvast-jpg.jpg" width="100" height="200" alt="Товар Kravt"></li>
+              <li><img src="img/content/img-pink-jpg.jpg" width="100" height="200" alt="Товар САЙТ 3"></li>
+              <li><img src="img/content/img-barbershop-jpg.jpg" width="100" height="200" alt="Товар Borodinsky"></li>
+              <li><img src="img/content/img-mishka-jpg.jpg" width="100" height="200" alt="Товар Mishka"></li>
+              <li><img src="img/content/img-aplus-jpg.jpg" width="100" height="200" alt="Товар Aplus"></li>
+              <li><img src="img/content/img-kvast-jpg.jpg" width="100" height="200" alt="Товар Kravt"></li>
           </ul>
 
         <div>
@@ -117,16 +117,16 @@
 
       <ul>
         <li><a href="#"> 
-          <img src="img\decor\vk-icon.svg" width="20" height="20" alt="Логотип ВК">
+          <img src="img/decor/vk-icon.svg" width="20" height="20" alt="Логотип ВК">
           Вконтакте</a>
         </li>
         <li><a href="#">
-          <img src="img\decor\fb-icon.svg" width="20" height="20" alt="Логотип Фейсбук">
+          <img src="img/decor/fb-icon.svg" width="20" height="20" alt="Логотип Фейсбук">
           Фейсбук</a>
         </li>
         <li>
           <a href="#">
-            <img src="img\decor\insta-icon.svg" width="20" height="20" alt="Логотип Инстаграмм">
+            <img src="img/decor/insta-icon.svg" width="20" height="20" alt="Логотип Инстаграмм">
             Инстаграмм</a>
         </li>
       </ul>
