--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="/src/catalog.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
         
@@ -36,7 +36,7 @@
           <h3>Долго, дорого, скурпулезно.</h3>
           <p>Математически выверенный дизайн для вашего сайта и мобильного приложения.</p>
           <button type="button">Узнать больше</button>
-          <img src="img/slider-background.svg" width="100" height="100" alt="Контент для слайдера">
+          <img src="img/decor/slide-picture-1.jpg" width="300" height="300" alt="Контент для слайдера">
         </div> 
         <ul>
           <li></li>
@@ -104,16 +104,16 @@
 
         <ul>
           <li>
-            <a href="#"><img src="img/website-HTML-Academy-logo.svg" alt="Сайт HTML-Academy"></a>
+            <a href="#"><img src="img/decor/htmlacademy-logo.png" alt="Сайт HTML-Academy"></a>
           </li>
           <li>
-            <a href="#"><img src="img/website-BORODINSKY-logo.svg" alt="Сайт Бородинский"></a>
+            <a href="#"><img src="img/decor/borodinski-logo.png" alt="Сайт Бородинский"></a>
           </li>
           <li>
-            <a href="#"><img src="img/website-PINK-logo.svg" alt="Сайт Пинк"></a>
+            <a href="#"><img src="img/decor/pink-logo.png" alt="Сайт Пинк"></a>
           </li>
           <li>
-            <a href="#"><img src="img/website-MISHKA-logo.svg" alt="Сайт Мишка"></a>
+            <a href="#"><img src="img/decor/mishka-logo.png" alt="Сайт Мишка"></a>
           </li>
         </ul>
       </section>
@@ -121,7 +121,7 @@
       <section>
         <h2>Расположение на карте</h2>
 
-        <img src="img/maps.svg" alt="Дислокация NERDS на карте">
+        <img src="img/decor/2.jpg" width="500" height="200" alt="Дислокация NERDS на карте">
         <div>
           <h3>NERDS DESIGN STUDIO</h3>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
