--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <ul>
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
-          <li><a href="/src/catalog.html">Магазин</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
         
         <div>
           <img src="img/decor/cart-icon.svg" width="15" height="15" alt="Значок корзина">
-          <button type="button">Войти</button>
+          <button type="button">Корзина</button>
         </div>
       </nav>
     </header>
