Скрыл элементы, которых нет на сайте
К элементам, которые не долны отображаться на сайте добавил класс "visually-hidden", чтобы потом скрыть через CSS.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <header>
-      <h2>Шапка сайта</h2>
+      <h2 class="visually-hidden">Шапка сайта</h2>
       <nav>
         <a>
           <img src="img/decor/nerds-logo.svg" width="150" height="80" alt="Логотип Нёрдс">
@@ -27,10 +27,10 @@
     </header>
 
     <main>
-      <h1>Сайт студии "Нёрдс"</h1>
+      <h1 class="visually-hidden">Сайт студии "Нёрдс"</h1>
 
       <section>
-        <h2>Слайдер</h2>
+        <h2 class="visually-hidden">Слайдер</h2>
 
         <div>
           <h3>Долго, дорого, скурпулезно.</h3>
@@ -46,7 +46,7 @@
       </section>
 
       <section>
-        <h2>Блок с заказами</h2>
+        <h2 class="visually-hidden">Блок с заказами</h2>
 
         <div>
           <img src="img/decor/advantage-picture-red.jpg" width="200" height="100" alt="Значок ВЕБ-САЙТЫ">
@@ -71,7 +71,7 @@
       </section>
 
       <section>
-        <h2>Описание</h2>
+        <h2 class="visually-hidden">Описание</h2>
 
         <div>
           <h3>Мы - маленькая, но гордая дизайн-студия из Краснодара</h3>
@@ -100,7 +100,7 @@
       </section>
 
       <section>
-        <h2>Ссылки на сайты-партнеры</h2>
+        <h2 class="visually-hidden">Ссылки на сайты-партнеры</h2>
 
         <ul>
           <li>
@@ -119,7 +119,7 @@
       </section>
           
       <section>
-        <h2>Расположение на карте</h2>
+        <h2 class="visually-hidden">Расположение на карте</h2>
 
         <img src="img/decor/2.jpg" width="500" height="200" alt="Дислокация NERDS на карте">
         <div>
