--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           <h3>Долго, дорого, скурпулезно.</h3>
           <p>Математически выверенный дизайн для вашего сайта и мобильного приложения.</p>
           <button type="button">Узнать больше</button>
-          <img src="img/decor/slide-picture-1.jpg" width="300" height="300" alt="Контент для слайдера">
+          <img src="img/decor/slide-picture-1.jpg" width="300" height="300" alt="Контент для слайдера рисунок 1">
+          <img src="img/decor/slide-picture-2.jpg" width="300" height="300" alt="Контент для слайдера рисунок 2">
+          <img src="img/decor/slide-picture-3.jpg" width="300" height="300" alt="Контент для слайдера рисунок 3">
         </div> 
         <ul>
           <li></li>
