Добавил к слайдеру кнопки
Добавил к слайдеру кнопки для перелистывания изображений

--- a/index.html
+++ b/index.html
@@ -41,9 +41,15 @@
           <img src="img/decor/slide-picture-3.jpg" width="300" height="300" alt="Контент для слайдера рисунок 3">
         </div> 
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <button type="button"><span>Слайд 1<span></button>
+          </li>
+          <li>
+            <button type="button"><span>Слайд 2<span></button>
+          </li>
+          <li>
+            <button type="button"><span>Слайд 3<span></button>
+          </li>
         </ul>
       </section>
 
