Скрыл еще один неотображаемый элемент
Еще один неотображаемый элемент получит class="visually-hidden"

--- a/index.html
+++ b/index.html
@@ -140,10 +140,11 @@
     </main>
 
     <footer>
-      <h2>Футер</h2>
+      <h2 class="visually-hidden">Футер</h2>
 
       <ul>
-        <li><a href="#"> 
+        <li>
+          <a href="#"> 
           <img src="img/decor/vk-icon.svg" width="20" height="20" alt="Логотип ВК">
           Вконтакте</a>
         </li>
