--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Hёрдс</title>
   </head>
   <body>
-
     <header>
       <h2 class="visually-hidden">Шапка сайта</h2>
       <nav>
@@ -142,6 +141,22 @@
         </div>
       </section>
 
+      <section>
+        <form action="#" method="POST">
+          <h2 class=>Напишите нами</h2>
+
+          <label for="user-name">Ваше имя</label>
+          <input id="user-name" type="text" name="userName" placeholder="Имя Фамилия">
+  
+          <label for="user-email">Ваш e-mail</label>
+          <input id="user-email" type="email" name="userEmail" placeholder="email@example.com">
+  
+          <label for="user-comment">Текст письма</label>
+          <textarea id="user-comment" name="userComment" placeholder="В свободной форме"></textarea>
+  
+          <button type="submit">Отправить</button>
+        </form>   
+      </section>
     </main>
 
     <footer>
