--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
 
     <header>
-      <h2>Шапка сайта</h2>
+      <h2 class="visually-hidden">Шапка сайта</h2>
 
       <nav>
       <a href="index.html">
@@ -19,6 +19,7 @@
           <li>Магазин</li>
           <li><a href="#">Контакты</a></li>
         </ul> 
+
         <div>
           <img src="img/decor/cart-icon.svg" width="15" height="15" alt="Значок корзина">
           <button type="button">Корзина</button>
@@ -30,7 +31,7 @@
       <h1>Магазин готовых шаблонов</h1>
 
       <section>
-        <h2>Фильтрация</h2>
+        <h2 class="visually-hidden">Фильтрация</h2>
 
         <div>
           <h3>Стоимость</h3>
@@ -73,7 +74,8 @@
       </section>
 
       <section>
-          <h2>Отображаемый список товаров</h2>
+          <h2 class="visually-hidden">Отображаемый список товаров</h2>
+
           <ul>
               <li>
                 <img src="img/content/img-sedona-jpg.jpg" width="100" height="200" alt="Товар Sedona"> 
@@ -89,7 +91,8 @@
           </ul>
 
         <div>
-          <h2>Отображаемый список товаров</h2>
+          <h2 class="visually-hidden">Отображаемый список товаров</h2>
+          
           <ol>
             <li></li> 
             <li></li>
@@ -113,7 +116,7 @@
     </main>
 
     <footer>
-      <h2>Футер</h2>
+      <h2 class="visually-hidden">Футер</h2>
 
       <ul>
         <li><a href="#"> 
