Поправил расположение на карте в catalog.html
Поправил, как должно быть

--- a/catalog.html
+++ b/catalog.html
@@ -103,15 +103,21 @@
       </section>
 
       <section>
-        <h2>Расположение на карте</h2>
+        <h2 class="visually-hidden">Расположение на карте</h2>
 
-        <img src="img/decor/2.jpg" width="500" height="200" alt="Дислокация NERDS на карте">
+         <div>
+          <img src="img/decor/2.jpg" width="500" height="200" alt="191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+          <img src="img/decor/map-marker-png.png" width="100" height="100" alt="Маркер NERDS на карте"> 
+         </div> 
+      
         <div>
           <h3>NERDS DESIGN STUDIO</h3>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           <p>тел. +7 (812) 275-75-75</p>
+          <button type="button">Напишите нам</button>
         </div>
       </section>
+
 
     </main>
 
