добавил ссылку к логотипу HTML academy в index.html
Добавил ссылку к логотиму HTML academy, как требовалось в описании проекта

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <ul>
           <li>
-            <a href="#"><img src="img/decor/htmlacademy-logo.png" alt="Сайт HTML-Academy"></a>
+            <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/decor/htmlacademy-logo.png" alt="Сайт HTML-Academy"></a>
           </li>
           <li>
             <a href="#"><img src="img/decor/borodinski-logo.png" alt="Сайт Бородинский"></a>
