--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
   </head>
   </head>
   <body>
-    <header>
+    <header class="main-header">
       <h2 class="visually-hidden">Шапка сайта</h2>
-      <nav>
-        <a>
-          <img src="img/decor/nerds-logo.svg" width="150" height="80" alt="Логотип Нёрдс">
-        </a>
-        <ul>
+
+      <nav class="main-navigation">
+        <img class="main-header-logo" src="img/decor/nerds-logo.svg" width="150" height="80" alt="Логотип Нёрдс">
+        <ul class="site-navigation">
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
           <li><a href="catalog.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
         
-        <div>
+        <div class="main-cart">
           <img src="img/decor/cart-icon.svg" width="15" height="15" alt="Значок корзина">
           <button type="button">Корзина</button>
         </div>
