--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
           <li><a href="#">Контакты</a></li>
         </ul>
         
-        <div class="main-cart">
-          <img src="img/decor/cart-icon.svg" width="15" height="15" alt="Значок корзина">
-          <button type="button">Корзина</button>
-        </div>
+        <ul class="main-cart">
+          <li>
+            <a href="#"><img src="img/decor/cart-icon.svg" width="15" height="15" alt="Значок корзина"> Корзина</a>
+          </li>
+        </ul>
+
       </nav>
     </header>
 
