Добавил навигацию в catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -12,21 +12,23 @@
     <header>
       <h2 class="visually-hidden">Шапка сайта</h2>
 
-      <nav>
-      <a href="index.html">
-        <img src="img/decor/nerds-logo.svg" width="150" height="80" alt="Логотип Нёрдс">
-      </a>
-        <ul>
+      <nav class="main-navigation">
+        <a href="index.html">
+          <img class="main-header-logo" src="img/decor/nerds-logo.svg" width="150" height="80" alt="Логотип Нёрдс">
+        </a>
+
+        <ul class="site-navigation">
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
           <li>Магазин</li>
           <li><a href="#">Контакты</a></li>
         </ul> 
 
-        <div>
-          <img src="img/decor/cart-icon.svg" width="15" height="15" alt="Значок корзина">
-          <button type="button">Корзина</button>
-        </div>
+        <ul class="main-cart">
+          <li>
+            <a href="#"><img src="img/decor/cart-icon.svg" width="15" height="15" alt="Значок корзина"> Корзина</a>
+          </li>
+        </ul>
       </nav>
     </header>
 
